--- a/ps4_all_white/final.css
+++ b/ps4_all_white/final.css
@@ -157,7 +157,7 @@ background-position: 0 -70px;
     position: absolute;
     width: 55px;
     height: 55px;
-    background: url(face.svgz);
+    background: url(buttons.svg);
 }
 
 .ds4 .button.pressed {
