--- a/Fox_PS4/final.css
+++ b/Fox_PS4/final.css
@@ -25,7 +25,7 @@
 .ds4 .trigger {
     width: 99px;
     height: 100%;
-    background: url(fox_triggers.svgz);
+    background: url(fox_triggers.svg);
     opacity: 0;
 }
 
@@ -41,7 +41,7 @@
 .ds4 .bumper {
     width: 99px;
     height: 23px;
-    background: url(fox_bumper.svgz) no-repeat;
+    background: url(fox_bumper.svg) no-repeat;
     opacity: 0;
 }
 
@@ -77,7 +77,7 @@
 }
 
 .ds4 .touchpad.pressed {
-    background: url(fox_touchpad.svgz) no-repeat center;
+    background: url(fox_touchpad.svg) no-repeat center;
 }
 
 .ds4 .meta {
@@ -89,7 +89,7 @@
 }
 
 .ds4 .meta.pressed {
-    background: url(fox_meta.svgz) no-repeat center;
+    background: url(fox_meta.svg) no-repeat center;
 }
 
 /*Not needed, but I like keeping them here for posterity*/
@@ -122,7 +122,7 @@ background-position: 0 -70px;
 }
 
 .ds4 .back, .ds4 .start {
-    background: url(fox_start.svgz);
+    background: url(fox_start.svg);
     width: 28px;
     height: 46px;
     opacity: 0;
@@ -157,7 +157,7 @@ background-position: 0 -70px;
     position: absolute;
     width: 55px;
     height: 55px;
-    background: url(fox_buttons.svgz);
+    background: url(fox_buttons.svg);
 }
 
 .ds4 .button.pressed {
@@ -197,7 +197,7 @@ background-position: 0 -70px;
 
 .ds4 .stick {
     position: absolute;
-    background: url(fox_sticks.svgz);
+    background: url(fox_sticks.svg);
     height: 94px;
     width: 94px;
 }
@@ -229,7 +229,7 @@ background-position: 0 -70px;
 }
 
 .ds4 .face {
-    background: url(fox_dpad.svgz);
+    background: url(fox_dpad.svg);
     position: absolute;
 }
 
