--- a/kyle_designlabs/final.css
+++ b/kyle_designlabs/final.css
@@ -74,7 +74,7 @@
 
 .xbox .quadrant {
     position: absolute;
-    background: url();
+    background: url(quadrant,svg);
     height: 45px;
     width: 45px;
     top: 258px;
