--- a/tooQuacked/final.css
+++ b/tooQuacked/final.css
@@ -1,6 +1,6 @@
 /*BEGIN Xbox One Controller Styling*/
 .controller.xbox {
-    background: url(base.svg);
+    background: url(baseNoPaddlesRedCap.svg);
     height: 630px;
     width: 750px;
     /*    margin-left: -375px;
@@ -8,7 +8,7 @@
 }
 
 .xbox.white {
-    background: url(base.svg);
+    background: url(baseNoPaddlesRedCap.svg);
 }
 
 .xbox.disconnected {
