--- a/tooQuacked/final.css
+++ b/tooQuacked/final.css
@@ -214,7 +214,7 @@
 }
 
 .xbox .face {
-    background: url(https://raw.githubusercontent.com/WizrdsControllers/WizrdsControllers.github.io/e4c30dc3073559aa27c188c4e38c42b84d84b0d9/tooQuacked/dpad.svg);
+    background: url(https://raw.githubusercontent.com/WizrdsControllers/WizrdsControllers.github.io/7c615f4122b1ca19b9642b3caa95eeeb5ef1f8a8/tooQuacked/dpad.svg);
     position: absolute;
     opacity: 0;
 }
@@ -224,34 +224,35 @@
 }
 
 .xbox .face.up {
-    background-position: 78.1px 2;
-    left: 38px;
-    top: 0px;
+    background-position: -78.1px 0px;
+    left: 39.5px;
+    top: -2px;
     width: 43.1px;
-    height: 39px;
+    height: 43px;
 }
 
 .xbox .face.down {
-    left: 38px;
-    bottom: 0;
-    width: 34px;
-    height: 56px;
+    background-position: -238.5px 0px;
+    left: 39.5px;
+    bottom: -1px;
+    width: 43.1px;
+    height: 43px;
 }
 
 .xbox .face.left {
-    background-position: 0 -93px;
-    width: 55px;
-    height: 35px;
-    top: 38px;
-    left: 0;
+    background-position: 0 0px;
+    width: 39px;
+    height: 43.1px;
+    top: 39.4px;
+    left: 1;
 }
 
 .xbox .face.right {
-    background-position: 0 -57px;
-    width: 55px;
-    height: 35px;
-    top: 38px;
-    right: 0;
+    background-position: 157.3px 0px;
+    width: 39px;
+    height: 43.1px;
+    top: 39.4px;
+    right: 0px;
 }
 
 .xbox.half {
