--- a/Normal xbox elite series 2/final.css
+++ b/Normal xbox elite series 2/final.css
@@ -1,6 +1,6 @@
 /*BEGIN Xbox One Controller Styling*/
 .controller.xbox {
-    background: url(https://raw.githubusercontent.com/WizrdsControllers/WizrdsControllers.github.io/27fd3ec29f99c6008c1cbca6d2254f607fb8ed04/Normal%20xbox%20elite%20series%202/basePaddles.svg);
+    background: url(basePaddles.svg);
     height: 651.4px;
     width: 741.5px;
     /*    margin-left: -375px;
@@ -8,11 +8,11 @@
 }
 
 .xbox.white {
-    background: url(https://raw.githubusercontent.com/WizrdsControllers/WizrdsControllers.github.io/27fd3ec29f99c6008c1cbca6d2254f607fb8ed04/Normal%20xbox%20elite%20series%202/basePaddles.svg);
+    background: url(basePaddles.svg);
 }
 
 .xbox.disconnected {
-    background: url(https://raw.githubusercontent.com/WizrdsControllers/WizrdsControllers.github.io/92388f0cb758a90b0d5ab2e4b5c654cd649ffa3d/Normal%20xbox%20elite%20series%202/disconnected.svg);
+    background: url(disconnected.svg);
 }
 
 .xbox.disconnected div {
@@ -29,7 +29,7 @@
 .xbox .trigger {
     width: 92.1px;
     height: 126.2px;
-    background: url(https://raw.githubusercontent.com/WizrdsControllers/WizrdsControllers.github.io/92388f0cb758a90b0d5ab2e4b5c654cd649ffa3d/Normal%20xbox%20elite%20series%202/trigger.svg);
+    background: url(trigger.svg);
     opacity: 0;
 }
 
@@ -46,7 +46,7 @@
 .xbox .bumper {
     width: 155.9px;
     height: 58.4px;
-    background: url(https://raw.githubusercontent.com/WizrdsControllers/WizrdsControllers.github.io/92388f0cb758a90b0d5ab2e4b5c654cd649ffa3d/Normal%20xbox%20elite%20series%202/bumper.svg);
+    background: url(bumper.svg);
     opacity: 0;
 }
 
@@ -74,7 +74,7 @@
 
 .xbox .quadrant {
     position: absolute;
-    background: url(https://raw.githubusercontent.com/WizrdsControllers/WizrdsControllers.github.io/92388f0cb758a90b0d5ab2e4b5c654cd649ffa3d/Normal%20xbox%20elite%20series%202/quadrant.svg);
+    background: url(quadrant.svg);
     height: 45px;
     width: 45px;
     top: 258px;
@@ -111,7 +111,7 @@
 }
 
 .xbox .back, .xbox .start {
-    background: url(https://raw.githubusercontent.com/WizrdsControllers/WizrdsControllers.github.io/92388f0cb758a90b0d5ab2e4b5c654cd649ffa3d/Normal%20xbox%20elite%20series%202/start-select.svg);
+    background: url(start-select.svg);
     width: 31.1px;
     height: 31.1px;
     opacity: 0;
@@ -140,7 +140,7 @@
 
 .xbox .button {
     position: absolute;
-    background: url(https://raw.githubusercontent.com/WizrdsControllers/WizrdsControllers.github.io/27fd3ec29f99c6008c1cbca6d2254f607fb8ed04/Normal%20xbox%20elite%20series%202/xyabpaddles.svg);
+    background: url(xyabpaddles.svg);
     width: 394.1px;
     height: 358.8px;
 }
@@ -185,7 +185,7 @@
 
 .xbox .stick {
     position: absolute;
-    background: url(https://raw.githubusercontent.com/WizrdsControllers/WizrdsControllers.github.io/92388f0cb758a90b0d5ab2e4b5c654cd649ffa3d/Normal%20xbox%20elite%20series%202/stick.svg);
+    background: url(stick.svg);
     height: 83.3px;
     width: 83.4px;
 }
@@ -261,7 +261,7 @@
     height: 0px;
     top: 338.3px;
     left: 209.7px;
-    background: url(https://raw.githubusercontent.com/WizrdsControllers/WizrdsControllers.github.io/92388f0cb758a90b0d5ab2e4b5c654cd649ffa3d/Normal%20xbox%20elite%20series%202/dpad.svg)
+    background: url(dpad.svg)
 }
 
 .xbox .fstick.up {
