--- a/Normal xbox elite series 2/final.css
+++ b/Normal xbox elite series 2/final.css
@@ -154,7 +154,7 @@
 .xbox .a {
     background-position: -935.4px 0;
     top: 49.4px;
-    right: 71px;
+    left: 337px;
 }
 
 .xbox .b {
@@ -337,3 +337,4 @@
 }
 
 /*END Xbox One Controller Styling*/
+
